[build-system]
requires = [ "setuptools>=68.0",]
build-backend = "setuptools.build_meta"

[project]
name = "dns-sock"
version = "0.1.0"
description = "Tunnel DNS queries over a unix datagram socket (dns-to-sock and sock-to-dns)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
dns-to-sock = "dns_sock.main:main_dns_to_sock"
sock-to-dns = "dns_sock.main:main_sock_to_dns"

[tool.setuptools]
packages = [ "dns_sock",]