[build-system]
requires = [ "setuptools>=68.0",]
build-backend = "setuptools.build_meta"

[project]
name = "netns-jail"
version = "0.1.0"
description = "Run a process in its own network namespace jail with optional unix socket forwarding and DNS tunneling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
netns-jail = "netns_jail.main:main"

[tool.setuptools]
packages = [ "netns_jail",]